# PhysAI

./: .gitignore  CITATION.cff  LICENSE  README.md  gen.py  index.html  pyproject.toml  requirements.txt  setup.cfg
examples/: example_markov.py  example_newton_cooling.py  example_photoelectric.py  example_planck.py  example_schrodinger.py
src/physai/: __init__.py  losses.py  pde_residual.py  pinn.py  trainer.py  utils.py  visualization.py
src/physai.egg-info/: PKG-INFO
tests/: test_pinn.py
